--- a/04-Milestone Project - 1/00-Warm-Up-Project-Exercises.ipynb
+++ b/04-Milestone Project - 1/00-Warm-Up-Project-Exercises.ipynb
@@ -36,10 +36,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def display_list(mylist):\n",
@@ -48,17 +46,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "mylist = [0,1,2,3,4,5,6,7,8,9,10]\n",
     "display_list(mylist)"
@@ -75,44 +65,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Please enter a value: 2\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'2'"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "input('Please enter a value: ')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Please enter a number: 2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "result = input(\"Please enter a number: \")"
    ]
@@ -410,10 +374,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def user_choice():\n",
@@ -433,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +403,6 @@
      "output_type": "stream",
      "text": [
       "Choose a number: hello\n",
-      "Choose a number: two\n",
       "Choose a number: 2\n"
      ]
     },
@@ -451,7 +412,7 @@
        "2"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,10 +430,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def user_choice():\n",
@@ -496,25 +455,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Choose a number: w\n",
+      "Sorry, but you did not enter an integer. Please try again.\n",
       "Choose a number: two\n",
       "Sorry, but you did not enter an integer. Please try again.\n",
-      "Choose a number: 2\n"
+      "Choose a number: 1\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "2"
+       "1"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,10 +495,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from IPython.display import clear_output\n",
@@ -546,10 +505,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def user_choice():\n",
@@ -579,13 +536,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Sorry, but you did not enter an integer. Please try again.\n",
       "Choose a number: 2\n"
      ]
     },
@@ -595,7 +553,7 @@
        "2"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -613,10 +571,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "result = 'wrong value'\n",
@@ -625,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -634,7 +590,7 @@
        "False"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -645,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +610,7 @@
        "True"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -665,10 +621,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from IPython.display import clear_output\n",
@@ -677,10 +631,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def user_choice():\n",
@@ -710,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -719,6 +671,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Sorry, but you did not choose a value in the correct range (0,1,2)\n",
       "Choose one of these numbers (0,1,2): 1\n"
      ]
     },
@@ -728,7 +681,7 @@
        "1"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -746,10 +699,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def user_choice():\n",
@@ -778,24 +729,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please enter a number (0-10): 12\n",
-      "Please enter a number (0-10): 2\n"
+      "Please enter a number (0-10): 5\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "2"
+       "5"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -816,10 +766,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 18,
+   "metadata": {},
    "outputs": [],
    "source": [
     "game_list = [0,1,2]"
@@ -827,10 +775,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def display_game(game_list):\n",
@@ -840,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -848,7 +794,7 @@
      "output_type": "stream",
      "text": [
       "Here is the current list\n",
-      "['hi', 'no', 2]\n"
+      "[0, 1, 2]\n"
      ]
     }
    ],
@@ -858,10 +804,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 21,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def position_choice():\n",
@@ -891,10 +835,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 22,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def replacement_choice(game_list,position):\n",
@@ -908,10 +850,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 25,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def gameon_choice():\n",
@@ -953,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -961,8 +901,7 @@
      "output_type": "stream",
      "text": [
       "Here is the current list\n",
-      "['34', 1, 'new value']\n",
-      "Would you like to keep playing? Y or N N\n"
+      "['1', 1, 2]\n"
      ]
     }
    ],
@@ -1006,7 +945,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1020,7 +959,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
