--- a/04-Milestone Project - 1/03-Milestone Project 1 - Complete Walkthrough Solution.ipynb
+++ b/04-Milestone Project - 1/03-Milestone Project 1 - Complete Walkthrough Solution.ipynb
@@ -29,10 +29,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from IPython.display import clear_output\n",
@@ -62,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +82,7 @@
     }
    ],
    "source": [
-    "test_board = ['#','X','O','X','O','X','O','X','O','X']\n",
+    "test_board = ['#','1','2','3','4','5','','X','O','X']\n",
     "display_board(test_board)"
    ]
   },
@@ -97,10 +95,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def player_input():\n",
@@ -124,13 +120,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Player 1: Do you want to be X or O? 2\n",
       "Player 1: Do you want to be X or O? X\n"
      ]
     },
@@ -140,7 +137,7 @@
        "('X', 'O')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,10 +155,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def place_marker(board, marker, position):\n",
@@ -177,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -212,10 +207,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def win_check(board,mark):\n",
@@ -239,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +241,7 @@
        "True"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,10 +259,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import random\n",
@@ -290,10 +281,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def space_check(board, position):\n",
@@ -310,10 +299,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def full_board_check(board):\n",
@@ -332,10 +319,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def player_choice(board):\n",
@@ -356,10 +341,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def replay():\n",
@@ -378,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -386,18 +369,18 @@
      "output_type": "stream",
      "text": [
       "   |   |\n",
-      "   | O | O\n",
+      " O |   | X\n",
       "   |   |\n",
       "-----------\n",
       "   |   |\n",
-      "   |   |  \n",
+      "   | O | X\n",
       "   |   |\n",
       "-----------\n",
       "   |   |\n",
-      " X | X | X\n",
+      " X | O | X\n",
       "   |   |\n",
-      "Congratulations! You have won the game!\n",
-      "Do you want to play again? Enter Yes or No: No\n"
+      "Player 2 has won!\n",
+      "Do you want to play again? Enter Yes or No: n\n"
      ]
     }
    ],
@@ -406,7 +389,7 @@
     "\n",
     "while True:\n",
     "    # Reset the board\n",
-    "    theBoard = [' '] * 10\n",
+    "    theBoard = ['1','2','3','4','5'] * 10\n",
     "    player1_marker, player2_marker = player_input()\n",
     "    turn = choose_first()\n",
     "    print(turn + ' will go first.')\n",
@@ -474,7 +457,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -488,7 +471,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
