--- a/07-Errors and Exception Handling/02-Errors and Exceptions Homework.ipynb
+++ b/07-Errors and Exception Handling/02-Errors and Exceptions Homework.ipynb
@@ -28,24 +28,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for ** or pow(): 'str' and 'int'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-c35f41ad7311>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;34m'a'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'b'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'c'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m**\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for ** or pow(): 'str' and 'int'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "4\n",
+      "4\n",
+      "I will always run\n"
      ]
     }
    ],
    "source": [
-    "for i in ['a','b','c']:\n",
-    "    print(i**2)"
+    "try:\n",
+    "    for i in [1,2,2]:\n",
+    "        print(i**2)\n",
+    "except TypeError:\n",
+    "    print(\"There was a type error\")\n",
+    "finally:\n",
+    "    print('I will always run')"
    ]
   },
   {
@@ -58,26 +62,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ZeroDivisionError",
-     "evalue": "division by zero",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-2-6f985c4c80dd>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0my\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mz\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mZeroDivisionError\u001b[0m: division by zero"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You can't devide by zero\n",
+      "All Done\n"
      ]
     }
    ],
    "source": [
-    "x = 5\n",
-    "y = 0\n",
+    "try:\n",
+    "    \n",
+    "    x = 5\n",
+    "    y = 0\n",
     "\n",
-    "z = x/y"
+    "    z = x/y\n",
+    "    \n",
+    "except ZeroDivisionError :\n",
+    "    print(\"You can't devide by zero\")\n",
+    "finally:\n",
+    "    print(\"All Done\")"
    ]
   },
   {
@@ -90,34 +98,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def ask():\n",
-    "    pass"
+    "    while True:\n",
+    "        \n",
+    "        try:\n",
+    "            result = int(input(\"Please provide number; \"))\n",
+    "        except ValueError:\n",
+    "            print(\"An Error occured please try again\")\n",
+    "            continue\n",
+    "        else:\n",
+    "            result = result*result\n",
+    "            print(f'Thank you, your number squared is:{result}')\n",
+    "            break\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Input an integer: null\n",
-      "An error occurred! Please try again!\n",
-      "Input an integer: 2\n",
-      "Thank you, your number squared is:  4\n"
+      "Please provide number; q\n",
+      "An Error occured please try again\n",
+      "Please provide number; e\n",
+      "An Error occured please try again\n",
+      "Please provide number; d\n",
+      "An Error occured please try again\n",
+      "Please provide number;  \n",
+      "An Error occured please try again\n",
+      "Please provide number; 4\n",
+      "Thank you, your number squared is:16\n"
      ]
     }
    ],
    "source": [
-    "ask()"
+    "ask()\n"
    ]
   },
   {
@@ -130,7 +153,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -144,7 +167,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
