--- a/08-Milestone Project - 2/00-Milestone-2-Warmup-Project.ipynb
+++ b/08-Milestone Project - 2/00-Milestone-2-Warmup-Project.ipynb
@@ -1486,7 +1486,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1500,7 +1500,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
