--- a/08-Milestone Project - 2/02-Milestone Project 2 - Walkthrough Steps Workbook.ipynb
+++ b/08-Milestone Project - 2/02-Milestone Project 2 - Walkthrough Steps Workbook.ipynb
@@ -65,17 +65,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 28,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import random\n",
     "\n",
-    "suits = pass\n",
-    "ranks = pass\n",
-    "values = pass\n",
+    "suits = ('Hearts', 'Diamonds', 'Spades', 'Clubs')\n",
+    "ranks = ('Two', 'Three', 'Four', 'Five', 'Six', 'Seven', 'Eight', 'Nine', 'Ten', 'Jack', 'Queen', 'King', 'Ace')\n",
+    "values = {'Two':2, 'Three':3, 'Four':4, 'Five':5, 'Six':6, 'Seven':7, 'Eight':8, 'Nine':9, 'Ten':10, 'Jack':10,\n",
+    "         'Queen':10, 'King':10, 'Ace':11}\n",
     "\n",
     "playing = True"
    ]
@@ -98,19 +97,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 30,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Card:\n",
     "    \n",
-    "    def __init__(self):\n",
-    "        pass\n",
+    "    def __init__(self,suit,rank):\n",
+    "        self.suit = suit\n",
+    "        self.rank = rank\n",
+    "        self.value = values[rank]\n",
     "    \n",
     "    def __str__(self):\n",
-    "        pass"
+    "        return self.rank + \" of \" + self.suit\n",
+    "  "
    ]
   },
   {
@@ -129,10 +129,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 31,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Deck:\n",
@@ -141,16 +139,20 @@
     "        self.deck = []  # start with an empty list\n",
     "        for suit in suits:\n",
     "            for rank in ranks:\n",
-    "                pass\n",
+    "                self.deck.append(Card(suit,rank))  # build Card objects and add them to the list\n",
     "    \n",
     "    def __str__(self):\n",
-    "        pass\n",
+    "        deck_comp = ''  # start with an empty string\n",
+    "        for card in self.deck:\n",
+    "            deck_comp += '\\n '+card.__str__() # add each Card object's print string\n",
+    "        return 'The deck has:' + deck_comp\n",
     "\n",
     "    def shuffle(self):\n",
     "        random.shuffle(self.deck)\n",
     "        \n",
     "    def deal(self):\n",
-    "        pass"
+    "        single_card = self.deck.pop()\n",
+    "        return single_card"
    ]
   },
   {
@@ -162,11 +164,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The deck has:\n",
+      " Two of Hearts\n",
+      " Three of Hearts\n",
+      " Four of Hearts\n",
+      " Five of Hearts\n",
+      " Six of Hearts\n",
+      " Seven of Hearts\n",
+      " Eight of Hearts\n",
+      " Nine of Hearts\n",
+      " Ten of Hearts\n",
+      " Jack of Hearts\n",
+      " Queen of Hearts\n",
+      " King of Hearts\n",
+      " Ace of Hearts\n",
+      " Two of Diamonds\n",
+      " Three of Diamonds\n",
+      " Four of Diamonds\n",
+      " Five of Diamonds\n",
+      " Six of Diamonds\n",
+      " Seven of Diamonds\n",
+      " Eight of Diamonds\n",
+      " Nine of Diamonds\n",
+      " Ten of Diamonds\n",
+      " Jack of Diamonds\n",
+      " Queen of Diamonds\n",
+      " King of Diamonds\n",
+      " Ace of Diamonds\n",
+      " Two of Spades\n",
+      " Three of Spades\n",
+      " Four of Spades\n",
+      " Five of Spades\n",
+      " Six of Spades\n",
+      " Seven of Spades\n",
+      " Eight of Spades\n",
+      " Nine of Spades\n",
+      " Ten of Spades\n",
+      " Jack of Spades\n",
+      " Queen of Spades\n",
+      " King of Spades\n",
+      " Ace of Spades\n",
+      " Two of Clubs\n",
+      " Three of Clubs\n",
+      " Four of Clubs\n",
+      " Five of Clubs\n",
+      " Six of Clubs\n",
+      " Seven of Clubs\n",
+      " Eight of Clubs\n",
+      " Nine of Clubs\n",
+      " Ten of Clubs\n",
+      " Jack of Clubs\n",
+      " Queen of Clubs\n",
+      " King of Clubs\n",
+      " Ace of Clubs\n"
+     ]
+    }
+   ],
    "source": [
     "test_deck = Deck()\n",
     "print(test_deck)"
@@ -189,10 +249,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 33,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Hand:\n",
@@ -202,10 +260,57 @@
     "        self.aces = 0    # add an attribute to keep track of aces\n",
     "    \n",
     "    def add_card(self,card):\n",
-    "        pass\n",
+    "        self.cards.append(card)\n",
+    "        self.value += values[card.rank]\n",
     "    \n",
     "    def adjust_for_ace(self):\n",
     "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_deck = Deck()\n",
+    "test_deck.shuffle()\n",
+    "test_player = Hand()\n",
+    "test_player.add_card(test_deck.deal())\n",
+    "test_player.add_card(test_deck.deal())\n",
+    "test_player.value \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Five of Hearts\n",
+      "Jack of Spades\n"
+     ]
+    }
+   ],
+   "source": [
+    "for card in test_player.cards:\n",
+    "\n",
+    "    print(card)"
    ]
   },
   {
@@ -218,10 +323,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 50,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Chips:\n",
@@ -231,10 +334,10 @@
     "        self.bet = 0\n",
     "        \n",
     "    def win_bet(self):\n",
-    "        pass\n",
+    "        self.total += self.bet\n",
     "    \n",
     "    def lose_bet(self):\n",
-    "        pass"
+    "        self.total -= self.bet"
    ]
   },
   {
@@ -255,15 +358,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 51,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def take_bet():\n",
+    "def take_bet(chips):\n",
     "    \n",
-    "    pass"
+    "    while True:\n",
+    "        try:\n",
+    "            chips.bet = int(input('How many chips would you like to bet? '))\n",
+    "        except ValueError:\n",
+    "            print('Sorry, a bet must be an integer!')\n",
+    "        else:\n",
+    "            if chips.bet > chips.total:\n",
+    "                print(\"Sorry, your bet can't exceed\",chips.total)\n",
+    "            else:\n",
+    "                break\n",
+    "    "
    ]
   },
   {
@@ -276,15 +387,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 52,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def hit(deck,hand):\n",
     "    \n",
-    "    pass"
+    "    hand.add_card(deck.deal())\n",
+    "    hand.adjust_for_ace()"
    ]
   },
   {
@@ -298,14 +408,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 53,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def hit_or_stand(deck,hand):\n",
     "    global playing  # to control an upcoming while loop\n",
+    "    \n",
+    "    while True:\n",
+    "        x = input(\"Would you like to Hit or Stand? Enter 'h' or 's' \")\n",
+    "        \n",
+    "        if x[0].lower() == 'h':\n",
+    "            hit(deck,hand)  # hit() function defined above\n",
+    "\n",
+    "        elif x[0].lower() == 's':\n",
+    "            print(\"Player stands. Dealer is playing.\")\n",
+    "            playing = False\n",
+    "\n",
+    "        else:\n",
+    "            print(\"Sorry, please try again.\")\n",
+    "            continue\n",
+    "        break\n",
     "    \n",
     "    pass"
    ]
@@ -320,19 +443,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 54,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def show_some(player,dealer):\n",
-    "    \n",
-    "    pass\n",
+    "    print(\"\\nDealer's Hand:\")\n",
+    "    print(\" <card hidden>\")\n",
+    "    print('',dealer.cards[1])  \n",
+    "    print(\"\\nPlayer's Hand:\", *player.cards, sep='\\n ')\n",
     "    \n",
     "def show_all(player,dealer):\n",
-    "    \n",
-    "    pass"
+    "    print(\"\\nDealer's Hand:\", *dealer.cards, sep='\\n ')\n",
+    "    print(\"Dealer's Hand =\",dealer.value)\n",
+    "    print(\"\\nPlayer's Hand:\", *player.cards, sep='\\n ')\n",
+    "    print(\"Player's Hand =\",player.value)"
    ]
   },
   {
@@ -345,26 +470,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 55,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def player_busts():\n",
-    "    pass\n",
+    "def player_busts(player,dealer,chips):\n",
+    "    print(\"Player busts!\")\n",
+    "    chips.lose_bet()\n",
     "\n",
-    "def player_wins():\n",
-    "    pass\n",
+    "def player_wins(player,dealer,chips):\n",
+    "    print(\"Player wins!\")\n",
+    "    chips.win_bet()\n",
     "\n",
-    "def dealer_busts():\n",
-    "    pass\n",
+    "def dealer_busts(player,dealer,chips):\n",
+    "    print(\"Dealer busts!\")\n",
+    "    chips.win_bet()\n",
     "    \n",
-    "def dealer_wins():\n",
-    "    pass\n",
+    "def dealer_wins(player,dealer,chips):\n",
+    "    print(\"Dealer wins!\")\n",
+    "    chips.lose_bet()\n",
     "    \n",
-    "def push():\n",
-    "    pass"
+    "def push(player,dealer):\n",
+    "    print(\"Dealer and Player tie! It's a push.\")"
    ]
   },
   {
@@ -377,54 +504,114 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to BlackJack! Get as close to 21 as you can without going over!\n",
+      "    Dealer hits until she reaches 17. Aces count as 1 or 11.\n",
+      "How many chips would you like to bet? 80\n",
+      "\n",
+      "Dealer's Hand:\n",
+      " <card hidden>\n",
+      " Ten of Clubs\n",
+      "\n",
+      "Player's Hand:\n",
+      " Seven of Diamonds\n",
+      " Ace of Clubs\n",
+      "Would you like to Hit or Stand? Enter 'h' or 's' h\n",
+      "\n",
+      "Dealer's Hand:\n",
+      " <card hidden>\n",
+      " Ten of Clubs\n",
+      "\n",
+      "Player's Hand:\n",
+      " Seven of Diamonds\n",
+      " Ace of Clubs\n",
+      " Seven of Clubs\n",
+      "Player busts!\n",
+      "\n",
+      "Player's winnings stand at 20\n"
+     ]
+    }
+   ],
    "source": [
     "while True:\n",
     "    # Print an opening statement\n",
-    "\n",
+    "    print('Welcome to BlackJack! Get as close to 21 as you can without going over!\\n\\\n",
+    "    Dealer hits until she reaches 17. Aces count as 1 or 11.')\n",
     "    \n",
     "    # Create & shuffle the deck, deal two cards to each player\n",
-    "\n",
+    "    deck = Deck()\n",
+    "    deck.shuffle()\n",
     "    \n",
-    "        \n",
+    "    player_hand = Hand()\n",
+    "    player_hand.add_card(deck.deal())\n",
+    "    player_hand.add_card(deck.deal())\n",
+    "    \n",
+    "    dealer_hand = Hand()\n",
+    "    dealer_hand.add_card(deck.deal())\n",
+    "    dealer_hand.add_card(deck.deal())\n",
+    "            \n",
     "    # Set up the Player's chips\n",
-    "    \n",
+    "    player_chips = Chips()  # remember the default value is 100    \n",
     "    \n",
     "    # Prompt the Player for their bet\n",
-    "\n",
+    "    take_bet(player_chips)\n",
     "    \n",
     "    # Show cards (but keep one dealer card hidden)\n",
-    "\n",
+    "    show_some(player_hand,dealer_hand)\n",
     "    \n",
     "    while playing:  # recall this variable from our hit_or_stand function\n",
-    "        \n",
+    "            \n",
     "        # Prompt for Player to Hit or Stand\n",
-    "        \n",
+    "        hit_or_stand(deck,player_hand) \n",
     "        \n",
     "        # Show cards (but keep one dealer card hidden)\n",
-    " \n",
+    "        show_some(player_hand,dealer_hand)  \n",
     "        \n",
     "        # If player's hand exceeds 21, run player_busts() and break out of loop\n",
+    "        if player_hand.value > 21:\n",
+    "            player_busts(player_hand,dealer_hand,player_chips)\n",
+    "            break        \n",
+    "\n",
+    "\n",
+    "    # If Player hasn't busted, play Dealer's hand until Dealer reaches 17 \n",
+    "    if player_hand.value <= 21:\n",
     "        \n",
-    "\n",
-    "            break\n",
-    "\n",
-    "    # If Player hasn't busted, play Dealer's hand until Dealer reaches 17\n",
-    "    \n",
+    "        while dealer_hand.value < 17:\n",
+    "            hit(deck,dealer_hand)    \n",
     "    \n",
     "        # Show all cards\n",
-    "    \n",
-    "        # Run different winning scenarios\n",
+    "        show_all(player_hand,dealer_hand)\n",
     "        \n",
+    "        # Run different winning scenarios\n",
+    "        if dealer_hand.value > 21:\n",
+    "            dealer_busts(player_hand,dealer_hand,player_chips)\n",
+    "\n",
+    "        elif dealer_hand.value > player_hand.value:\n",
+    "            dealer_wins(player_hand,dealer_hand,player_chips)\n",
+    "\n",
+    "        elif dealer_hand.value < player_hand.value:\n",
+    "            player_wins(player_hand,dealer_hand,player_chips)\n",
+    "\n",
+    "        else:\n",
+    "            push(player_hand,dealer_hand)        \n",
     "    \n",
     "    # Inform Player of their chips total \n",
+    "    print(\"\\nPlayer's winnings stand at\",player_chips.total)\n",
     "    \n",
     "    # Ask to play again\n",
-    "\n",
-    "        break"
+    "    new_game = input(\"Would you like to play another hand? Enter 'y' or 'n' \")\n",
+    "    \n",
+    "    if new_game[0].lower()=='y':\n",
+    "        playing=True\n",
+    "        continue\n",
+    "    else:\n",
+    "        print(\"Thanks for playing!\")\n",
+    "        break  "
    ]
   },
   {
@@ -438,7 +625,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -452,7 +639,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
