--- a/08-Milestone Project - 2/03-Milestone Project 2 - Complete Walkthrough Solution.ipynb
+++ b/08-Milestone Project - 2/03-Milestone Project 2 - Complete Walkthrough Solution.ipynb
@@ -818,7 +818,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -832,7 +832,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
